# online_training

./: .env.conf  alembic.ini  main.py  pyproject.toml
app/: application.py
app/api/v1/: routes.py
app/api/v1/endpoints/: health_check.py  profile.py  profile_photo.py  user.py
app/controller/http/v1/: health.py
app/controller/http/v1/routes/: user.py
app/db/: database.py
app/dto/: application.py  profile.py  user.py
app/entity/: course.py  mixin.py  user.py
app/repository/: profile.py  profile_photo.py  user.py
app/service/: profile.py  profile_photo.py  user.py
app/utils/: config.py
app/utils/auth/: hashing.py  my_token.py  oauth2.py
migrations/: env.py
migrations/versions/: 05ffdd5f3eba_add_count_tables.py  2a90fc3235f5_add_fields_name_in_user.py  35721438df7c_int_db.py  387587f2876b_modify_table_user.py  7a624fb396c5_add_unique.py  7de95369c881_add_two_tables.py  7e84c9a1dbe4_add_new_fields.py  8a7d860f4f0f_modify_table_user.py  8c6f49c20e7c_remove_relationhip_profiles.py  b6e703663a5f_change_fields.py  bd91db2bdcd2_add_profilephoto_table.py  bfa06b590665_modify_table_user.py  d57e81808262_add_photo_fields.py  d8a3cb05dfc7_modify_table_user.py  deb43ab44d1d_remove_nullable.py
